--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1510,19 +1510,19 @@
 
 include dracula.conf
 
-font_family JetBrains Mono
-bold_font JetBrains Mono Bold
-italic_font JetBrains Mono Italic
-bold_italic_font JetBrains Mono Italic
+font_family Hack Mono
+bold_font Hack Mono Bold
+italic_font Hack Mono Italic
+bold_italic_font Hack Mono Italic
 font_size 13
-adjust_line_height 150%
+adjust_line_height 130%
 
 cursor_blink_interval 0
 window_padding_width 10
 hide_window_decorations yes
 remember_window_size no
-initial_window_width 1000
-initial_window_height 650
+initial_window_width 1200
+initial_window_height 1000
 enable_audio_bell no
 
 map ctrl+shift+f3 set_tab_title
