Use hack font in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1510,10 +1510,11 @@
 
 include dracula.conf
 
-font_family Hack Mono
-bold_font Hack Mono Bold
-italic_font Hack Mono Italic
-bold_italic_font Hack Mono Italic
+font_family Hack Nerd Mono
+bold_font auto
+italic_font auto
+bold_italic_font auto
+
 font_size 13
 adjust_line_height 130%
 
