--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1510,7 +1510,7 @@
 
 include dracula.conf
 
-font_family Hack Nerd Mono
+font_family Hack Mono
 bold_font auto
 italic_font auto
 bold_italic_font auto
