Added dracula-plugin to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,5 +71,17 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 # text snipped will be searched directly inside google by default
 set -g @plugin 'tmux-plugins/tmux-open'
 
+set -g @plugin 'dracula/tmux'
+# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+# set -g @dracula-plugins "battery cpu-usage ram-usage network time"
+set -g @dracula-plugins "git cpu-usage ram-usage time"
+# set -g @dracula-plugins " "
+# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
+set -g @dracula-border-contrast true
+set -g @dracula-show-flags true
+set -g @dracula-show-powerline true
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
