--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1512,10 +1512,10 @@ map ctrl+f2 detach_tab
 
 include dracula.conf
 
-font_family Hack Regular
-bold_font auto
-italic_font auto
-bold_italic_font auto
+font_family Hack Nerd Font Mono Regular
+bold_font Hack Nerd Font Mono Bold
+italic_font Hack Nerd Font Mono Italic
+bold_italic_font Hack Nerd Font Mono Bold Italic
 
 font_size 12
 adjust_line_height 100%
