--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1522,7 +1522,7 @@ adjust_line_height 100%
 
 cursor_blink_interval 0
 window_padding_width 10
-hide_window_decorations yes
+hide_window_decorations no
 remember_window_size no
 initial_window_width 1200
 initial_window_height 1000
